# mail

./: .gitignore  CLAUDE.md  Cargo.toml  compatibility.toml  deny.toml
crates/kiwi-mail/: Cargo.toml
crates/kiwi-mail-client/: Cargo.toml
crates/kiwi-mail-client/src/: lib.rs
crates/kiwi-mail-types/: Cargo.toml
crates/kiwi-mail-types/src/: lib.rs
crates/kiwi-mail/src/: config.rs  jmap.rs  main.rs  upstream.rs
crates/kiwi-mail/src/api/: health.rs  mail.rs  mod.rs  tools.rs
scripts/: provision-lxc.sh
